<resources>
    <string name="app_name">Manakory</string>
    <string name="title_home">Accueil</string>
    <string name="title_favorite">Favori</string>
    <string name="title_setting">Paramètres</string>
    <string name="title_profile">Profil</string>
    <string name="title_article_list">Articles</string>
    <string name="placeholderRecherche">Rechercher à partir d\'un titre</string>
    <string name="boutonVoirDetails">Détails</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_article_detail">Detail de l\'article</string>
</resources>