<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.applicationandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_cardFragment_to_detailFragment"
            app:destination="@id/navigation_article_list">
            <argument
                android:name="categorie_id"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.applicationandroid.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.applicationandroid.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.applicationandroid.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/navigation_article_list"
        android:name="com.example.applicationandroid.ui.home.ArticleListFragment"
        android:label="@string/title_article_list"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_cardArticleFragment_to_detailArticleFragment"
            app:destination="@id/navigation_article_detail">
            <argument
                android:name="article"
                app:argType="com.example.applicationandroid.modele.Article"
                android:defaultValue="@null" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_article_detail"
        android:name="com.example.applicationandroid.ArticleDetailFragment"
        android:label="@string/title_article_detail"
        tools:layout="@layout/fragment_home" >
    </fragment>
</navigation>